add ImageView content description
add string resources

add injection

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">Bubbles</string>
+    <string name="backgroundDescription">background</string>
+    <string name="smallBubbleDescription">smallBubble</string>
+    <string name="bigBubbleDescription">bigBubble</string>
+    <string name="mediumBubbleDescription">mediumBubble</string>
 </resources>
